<resources>
    <string name="placeholder_item_xl_description">SCALP SHIELD TECHNOLOGY: Use regularly for a continuous invisible shield of protection against dandruff, itch+ and dryness, renewing 72 HOUR PROTECTION: powerful, long-lasting dandruff protectionMulti-symptom relief offers proven protection from flakes, itch* and dryness (*flakes and itch associated with dandruff) Nourishes to relieve dandruff symptoms while cleansing hair and scalp* (*with regular use) Light classic scent leaves hair smelling fresh and clean</string>
    <string name="app_name">Pharmalytic</string>
    <string name="reg_redirect"><u>Already a member? Sign In</u></string>
    <string name="reg_sign_up">Sign Up</string>
    <string name="reg_confirm_password">Confirm Password</string>
    <string name="reg_password">Password</string>
    <string name="reg_e_mail">E-Mail</string>
    <string name="reg_name">Name</string>
    <string name="reg_get_started">Get Started</string>
    <string name="placeholder_item_title">Head &amp; Shoulders</string>
    <string name="placeholder_item_description"><![CDATA[Dandruff Shampoo, Anti-Dandruff Treatment, Classic Clean for Daily Use]]></string>
    <string name="item_image_preview">Item Image Preview</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="view">VIEW</string>
    <string name="do_you_want_to_leave">Do you want to leave?</string>
    <string name="are_you_sure">ARE YOU SURE?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="app_title">Pharmalytic</string>

    <string name="title_activity_main_list_view">MainListView</string>
    <string name="title_activity_list_view_m.xml">list_view_m.xml</string>
    <string name="search">Search</string>
    <string name="placeholder_item_price">25.7₪</string>
    <string name="logo">logo</string>
    <string name="select_quantity">Select Quantity</string>
    <string name="about_this_item">About this item:</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="xl_description">xl description</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="image_path">Image Path</string>
    <string name="add_item">Add Item</string>
    <string name="search_result">Search Result</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="placeholder_total">$0.0</string>
    <string name="placeholder_quantity">5</string>
    <string name="add_quantity">Add Quantity</string>
    <string name="remove_quantity">Remove Quantity</string>
    <string name="remember_me">Remember me</string>
    <string name="user">User</string>
    <string name="home">Home</string>
    <string name="recent">Recent</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="slide_to_go_back">Slide To Go Back</string>
    <string name="change_password">change password</string>
    <string name="checkout_step_address">Checkout Step Address</string>
    <string name="checkout_step_payment">Checkout Step Payment</string>
    <string name="checkout_step_review">Checkout Step Review</string>
    <string name="address">Address</string>
    <string name="hint_delivery">1234 Forest Road</string>
    <string name="delivery">Delivery</string>
    <string name="hint_city">New York</string>
    <string name="hint_zip">30022</string>
    <string name="zip_code">Zip Code</string>
    <string name="state">State</string>
    <string name="hint_state">NY</string>
    <string name="city">City</string>
    <string name="payment">Payment</string>
    <string name="card_number">Card Number</string>
    <string name="expiration">Expiration</string>
    <string name="expiration_hint">MM/YY</string>
    <string name="code_hint">01/20</string>
    <string name="secure_code">Secure Code</string>
    <string name="review">review</string>
    <string name="party_popper">🎉</string>
    <string name="order_confirm_message">Your order has been placed you will recive an email shortly.</string>
    <string name="thank_you">thank you!</string>
    <string name="back_to_home">back to home</string>
    <string name="back">Back</string>
    <string name="recents">Recents</string>
    <string name="submit">Submit</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="change_your_password">Change your Password</string>
</resources>