<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:orientation="vertical"
    tools:context=".ReviewFragment">

    <TextView
        style="@style/text.h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/thank_you"
        android:textAllCaps="true" />


    <TextView
        style="@style/text.h4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:layout_weight="1"
        android:paddingHorizontal="30dp"
        android:paddingVertical="30dp"
        android:text="@string/order_confirm_message"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/text_secondary" />

    <TextView
        style="@style/text.h4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/party_popper"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="60sp"

        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/review_btn_back"
        style="@style/button.success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:paddingHorizontal="50dp"
        android:text="@string/back_to_home"
        android:textSize="22sp" />

</androidx.appcompat.widget.LinearLayoutCompat>