<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:orientation="vertical"
    tools:context=".PaymentFragment">

    <TextView
        style="@style/text.h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/payment"
        android:textAllCaps="true" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <TextView
            style="@style/text.form_label"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/card_number"
            android:labelFor="@+id/payment_et_card"/>

        <EditText
            android:id="@+id/payment_et_card"
            style="@style/text.form_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="creditCardNumber"
            android:digits="01234 56789"
            android:inputType="number"
            android:maxLength="19" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"

        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="10dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/text.form_label"
                android:layout_width="wrap_content"


                android:layout_height="wrap_content"
                android:text="@string/expiration" />

            <EditText
                android:id="@+id/payment_et_expiration"
                style="@style/text.form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardExpirationDate"
                android:hint="@string/expiration_hint"
                android:digits="0123456789/"
                android:inputType="number"
                android:maxLength="5"
                android:textColorHint="@color/text_tertiary" />

        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/text.form_label"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:text="@string/secure_code" />

            <EditText
                android:id="@+id/payment_et_code"
                style="@style/text.form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="creditCardSecurityCode"
                android:hint="@string/code_hint"
                android:inputType="number"
                android:maxLength="4"
                android:textColorHint="@color/text_tertiary" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/payment_btn_toReview"
        style="@style/button.success"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="20dp"
        android:drawableEnd="@drawable/baseline_arrow_forward_24"
        android:drawablePadding="8dp"
        android:paddingHorizontal="50dp"
        android:text="@string/review"
        android:textSize="22sp" />

</androidx.appcompat.widget.LinearLayoutCompat>