<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_item_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginTop="10dp"
    app:cardBackgroundColor="@color/secondary_bg"
    app:cardElevation="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/tertiary_rounded_bordered"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"

        >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/card_item_image"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/card_item_title"
                style="@style/text.h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:text="@string/placeholder_item_title" />

            <TextView
                android:id="@+id/card_item_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:text="@string/placeholder_item_description"
                android:textColor="@color/text_secondary" />


            <TextView
                android:id="@+id/card_item_price"
                style="@style/text.form_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/placeholder_item_price"
                android:textColor="@color/info_text" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/card_item_btn_add"
                    style="@style/button.primary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginEnd="5dp"

                    android:text="@string/add_to_cart" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/card_item_btn_view"
                    style="@style/button.secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="5dp"

                    android:text="@string/view" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/card_item_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/item_image_preview"
            android:src="@drawable/card_image_placeholder"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/rounded_image" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>