<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_bg"
    android:orientation="vertical"
    tools:context=".CartActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat9"
        style="@style/header_layout">

        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:background="@drawable/app_logo"
            android:contentDescription="@string/logo" />

        <TextView
            style="@style/text.splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:text="@string/cart"
            android:textAllCaps="true" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="20dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/cart_linearLayout_buttonGroup"
        style="@style/header_layout"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/text.p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="-16sp"
                android:text="@string/total" />

            <TextView
                android:id="@+id/cart_textView_total"
                style="@style/text.h4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="-16sp"
                android:text="@string/placeholder_total"
                android:textColor="@color/info_text" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cart_btn_checkout"
            style="@style/button.success"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:drawableEnd="@drawable/baseline_shopping_cart_checkout_24"
            android:drawablePadding="20dp"
            android:text="@string/checkout"
            tools:ignore="VisualLintButtonSize" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>