<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="40dp"
    android:layout_marginVertical="220dp"
    android:background="@drawable/tertiary_rounded_bordered"
    android:padding="20dp">

    <TextView
        android:id="@+id/exit_title"
        style="@style/text.h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:text="@string/are_you_sure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exit_description"
        style="@style/text.h3"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/do_you_want_to_leave"

        android:textColor="@color/text_secondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_no_exit"
        style="@style/button.primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/no"
        android:textSize="26sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exit_description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_exit"
        style="@style/button.secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/yes"
        android:textSize="26sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_no_exit"
        app:layout_constraintTop_toBottomOf="@+id/exit_description" />
</androidx.constraintlayout.widget.ConstraintLayout>